fix h2 to 1.75rem on tablet media query

--- a/css/weens.css
+++ b/css/weens.css
@@ -328,7 +328,7 @@ li {
     margin: 0rem 0rem 1rem 0rem;
   }
   h2 {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     letter-spacing: -0.2rem;
     padding: 0.25rem 0rem 0.25rem 0rem;
     margin: 0rem;
